tests/invalid/string.nt
# invalid string
ingredients:
    green chilies
